# ID3v2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint  main.cpp  myUtils.hpp  tddfile.cpp
.github/workflows/: cmake.yml  cpp.yml
Docs/: Docs.txt  IMPORTANT.txt
Tests/: tddFileReader.cpp  tddID3Header.cpp  tddID3Skipper.cpp  tddReadValidTagHeader.cpp  tddTagReader.cpp  tddfile.cpp
config/: CMakeLists.txt
include/: FileDataReader.hpp  ID3Utils.hpp  ID3v1Genres.hpp  ID3v2.hpp  IDataReader.hpp  catch2KLJ.hpp  myDebug.hpp  mySystemError.hpp  myUtils.hpp
src/: main.cpp
